--- a/4_narrowing/index.html
+++ b/4_narrowing/index.html
@@ -8,5 +8,6 @@
 </head>
 <body style="background-color: black; color: white;">
   <h1>Fundamentos de Typescript</h1>
+  <p id="some-p">Algum paragrafo</p>
 </body>
 </html>
