--- a/4_narrowing/index.html
+++ b/4_narrowing/index.html
@@ -7,7 +7,6 @@
   <script src="index.js" defer></script>
 </head>
 <body style="background-color: black; color: white;">
-  <h1>Fundamentos de Typescript</h1>
-  <p id="some-p">Algum paragrafo</p>
+  <h1>Narrowing</h1>
 </body>
 </html>
